--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clínica Psiquiátrica [Nome da Clínica]</title>
+    <title>Clínica Psiquiátrica</title>
     <link rel="stylesheet" href="base.css">
 </head>
 <body>
@@ -23,15 +23,15 @@
 
             <!-- Página Principal -->
             <div class="header" style="background-image: url('imagem-header-principal.jpg');">
-                <h1>Bem-vindo à Clínica Psiquiátrica [Nome da Clínica]</h1>
+                <h1>Bem-vindo à Clínica Psiquiátrica</h1>
             </div>
     
             <div class="content">
-                <p>A Clínica Psiquiátrica [Nome da Clínica] oferece um atendimento especializado e humanizado, com foco no bem-estar e recuperação de pacientes que enfrentam transtornos mentais e emocionais. Nossa equipe multidisciplinar está pronta para oferecer o melhor tratamento, utilizando abordagens terapêuticas modernas e personalizadas para cada indivíduo.</p>
+                <p>A Clínica Psiquiátrica oferece um atendimento especializado e humanizado, com foco no bem-estar e recuperação de pacientes que enfrentam transtornos mentais e emocionais. Nossa equipe multidisciplinar está pronta para oferecer o melhor tratamento, utilizando abordagens terapêuticas modernas e personalizadas para cada indivíduo.</p>
             </div>
     
             <div class="footer">
-                <p>&copy; 2024 Clínica Psiquiátrica [Nome da Clínica] | Todos os direitos reservados</p>
+                <p>&copy; 2024 Clínica Psiquiátrica | Todos os direitos reservados</p>
             </div>
         </div>
     </div>
@@ -53,11 +53,11 @@
             </div>
 
             <div class="content">
-                <p>A Clínica Psiquiátrica [Nome da Clínica] foi fundada com a missão de proporcionar tratamentos psiquiátricos de alta qualidade, focando na saúde mental e no acompanhamento integral dos pacientes. Com um ambiente acolhedor e equipe qualificada, buscamos auxiliar na superação de desafios psicológicos e promover o bem-estar mental.</p>
+                <p>A Clínica Psiquiátrica foi fundada com a missão de proporcionar tratamentos psiquiátricos de alta qualidade, focando na saúde mental e no acompanhamento integral dos pacientes. Com um ambiente acolhedor e equipe qualificada, buscamos auxiliar na superação de desafios psicológicos e promover o bem-estar mental.</p>
             </div>
 
             <div class="footer">
-                <p>&copy; 2024 Clínica Psiquiátrica [Nome da Clínica] | Todos os direitos reservados</p>
+                <p>&copy; 2024 Clínica Psiquiátrica | Todos os direitos reservados</p>
             </div>
         </div>
     </div>
@@ -79,7 +79,7 @@
             </div>
 
             <div class="content">
-                <p>Na Clínica Psiquiátrica [Nome da Clínica], oferecemos diversos serviços especializados para atender as necessidades de cada paciente. Confira abaixo nossos horários e preços:</p>
+                <p>Na Clínica Psiquiátrica, oferecemos diversos serviços especializados para atender as necessidades de cada paciente. Confira abaixo nossos horários e preços:</p>
 
                 <table>
                     <tr>
@@ -110,7 +110,7 @@
             </div>
 
             <div class="footer">
-                <p>&copy; 2024 Clínica Psiquiátrica [Nome da Clínica] | Todos os direitos reservados</p>
+                <p>&copy; 2024 Clínica Psiquiátrica | Todos os direitos reservados</p>
             </div>
         </div>
     </div>
@@ -165,7 +165,7 @@
             </div>
 
             <div class="footer">
-                <p>&copy; 2024 Clínica Psiquiátrica [Nome da Clínica] | Todos os direitos reservados</p>
+                <p>&copy; 2024 Clínica Psiquiátrica | Todos os direitos reservados</p>
             </div>
         </div>
     </div>
